examples/errors/much.spl

hi(a:Int,b:Bool,c:Char) {
    return a + b;
}

int main() {
    // hi(2);
}